--- a/BFStudio/MainPages/Shared/_UserPartial.cshtml
+++ b/BFStudio/MainPages/Shared/_UserPartial.cshtml
@@ -4,12 +4,6 @@
 @foreach (var menu in Model.OrderBy(p => p.SORT_NO))
 {
     <ul>
-        <li>@Html.ActionLink(@menu.NAME, @menu.ACTION, @menu.CONTROLLER, routeValues: null, htmlAttributes: new { @class = "upper-menu" })</li>
+        <li>@Ajax.ActionLink(@menu.NAME,@menu.ACTION ,@menu.CONTROLLER , null , new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "main" }, htmlAttributes: new { @class = "upper-menu" })</li>
     </ul>
 }
-<ul>
-    <li>@Html.ActionLink("ユーザ登録", "Create", "ResisterUser", routeValues: null, htmlAttributes: new { @class = "upper-menu" })</li>
-</ul>
-<ul>
-    <li>@Html.ActionLink("ログイン", "Index", "Login", routeValues: null, htmlAttributes: new { @class = "upper-menu" })</li>
-</ul>
