--- a/BFStudio/MainPages/Top/Views/Index.cshtml
+++ b/BFStudio/MainPages/Top/Views/Index.cshtml
@@ -1,7 +1,21 @@
 ﻿@model BFStudio.MainPages.Top.Models.TopModel
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "トップ";
 }
 
-<h2>ようこそトップページへ</h2>
+@using (Ajax.BeginForm(new AjaxOptions() { HttpMethod = "POST", UpdateTargetId = "main" }))
+{
+    <div>
+        <h2>カレンダー</h2>
+    </div>
+    <div>
+        <h2>課題</h2>
+    </div>
+    <div>
+        <h2>プロジェクト</h2>
+    </div>
+    <div>
+        <h2>記事</h2>
+    </div>
+}
