--- a/BFStudio/Content/menu.less
+++ b/BFStudio/Content/menu.less
@@ -11,8 +11,8 @@
 }
 
 .test-color(@color:black;@bg-color:pink){
-    color:@color;
-    background-color:@bg-color;
+    /*color:@color;
+    background-color:@bg-color;*/
 }
 
 .menu(){
