--- a/BFStudio/Content/Site.css
+++ b/BFStudio/Content/Site.css
@@ -1,24 +1,14 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+  text-align: center;
+  width: 100%;
 }
-
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+div.login {
+  margin: 0 auto;
+  width: 1000px;
 }
-
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+div.login .main {
+  margin-top: 400px;
+  border-style: solid;
+  border-radius: 5px;
 }
-
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
+/*# sourceMappingURL=Site.css.map */
