--- a/BFStudio/Content/menu.css
+++ b/BFStudio/Content/menu.css
@@ -28,8 +28,8 @@
 }
 div.main {
   float: left;
-  color: black;
-  background-color: pink;
+  /*color:@color;
+    background-color:@bg-color;*/
   width: 100%;
   height: 100%;
 }
