--- a/BFStudio/MainPages/Login/Views/Index.cshtml
+++ b/BFStudio/MainPages/Login/Views/Index.cshtml
@@ -1,23 +1,34 @@
-﻿@model BFStudio.Entity.MST_USER
+﻿@model BFStudio.MainPages.Login.Models.LoginModel
 
 @{
     ViewBag.Title = "ログイン画面";
 }
 
-@using (Html.BeginForm("Authentication", "Login", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post))
-{
-    @Html.AntiForgeryToken()
-    <div id="login">
-        <div>
-            @Html.LabelFor(m => m.Login_Id_Form)
-            @Html.TextBoxFor(m => m.Login_Id_Form)
-            @Html.ValidationMessageFor(m => m.Login_Id_Form)
-            @Html.LabelFor(m => m.Password_Form)
-            @Html.PasswordFor(m => m.Password_Form)
-            @Html.ValidationMessageFor(m => m.Password_Form)
+<body>
+    @using (Html.BeginForm("Authentication", "Login", new { ReturnUrl = ViewBag.ReturnUrl, @class = "form-login" }, FormMethod.Post))
+    {
+        <div class="login">
+            @Html.AntiForgeryToken()
+            <div class="main">
+                <div class="title">
+                    <h1>予定管理システム</h1>
+                    <h1>BF-Studio</h1>
+                </div>
+                <div>
+                    @Html.LabelFor(m => m.LoginId, htmlAttributes: new { id = "user" })
+                    @Html.TextBoxFor(m => m.LoginId, htmlAttributes: new { id = "user", placeholder = "ログイン" })
+                    @Html.ValidationMessageFor(m => m.LoginId)
+                </div>
+                <div>
+                    @Html.LabelFor(m => m.Password, htmlAttributes: new { id = "pass" })
+                    @Html.PasswordFor(m => m.Password, htmlAttributes: new { id = "pass", placeholder = "パスワード" })
+                    @Html.ValidationMessageFor(m => m.Password)
+                </div>
+
+                <input type="submit" value="ログイン" />
+            </div>
         </div>
-        <div>
-            <input type="submit" value="ログイン" />
-        </div>
-    </div>
-}
+    }
+    @Styles.Render("~/bundles/css")
+
+</body>
