--- a/BFStudio/MainPages/Shared/_Layout.cshtml
+++ b/BFStudio/MainPages/Shared/_Layout.cshtml
@@ -10,10 +10,12 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The description of my page" />
 </head>
 <body>
     <div class="upper-menu">
-        @Html.Partial("_UserPartial",Constants.MenuList)
+        @Html.Partial("_UserPartial", Constants.MenuList)
     </div>
 
     <div class="main">
@@ -23,5 +25,11 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
+    @if (MvcApplication.IsDebug)
+    {
+        Output.WriteLine(Scripts.Render("~/Content/cssrefresh"));
+    }
 </body>
+
 </html>
