--- a/BFStudio/MainPages/Top/Views/Index.cshtml
+++ b/BFStudio/MainPages/Top/Views/Index.cshtml
@@ -2,14 +2,72 @@
 
 @{
     ViewBag.Title = "トップ";
-}
 
+    string[] weekley = {
+                       "日曜日",
+                       "月曜日",
+                       "火曜日",
+                       "水曜日",
+                       "木曜日",
+                       "金曜日",
+                       "土曜日"
+                       };
+    string[] weekley_class = {
+                       "sunday",
+                       "weekday",
+                       "weekday",
+                       "weekday",
+                       "weekday",
+                       "weekday",
+                       "saturday"
+                       };
+}
+@Styles.Render("~/bundles/calendar")
 @using (Ajax.BeginForm(new AjaxOptions() { HttpMethod = "POST", UpdateTargetId = "main" }))
 {
-    <div>
-        <h2>カレンダー</h2>
+    <div class="calendar-body">
+        <div class="disp-date">
+            <input type="text" value="2012">
+            <label>年</label>
+            <input type="text" value="12">
+            <label>月</label>
+            <input type="text" value="11">
+            <label>日</label>
+        </div>
+        <table>
+            <thead>
+                <tr>
+                    @for (int i = 0; i < 7; i++)
+                    {
+                        <th>
+                            <div class="@weekley_class[i]">
+                                <label>@weekley[i]</label>
+                            </div>
+                        </th>
+                    }
+                </tr>
+            </thead>
+
+            <tbody>
+                @for (int i = 0; i < 5; i++)
+                {
+                <tr>
+                    @for (int j = 1; j <= 7; j++)
+                    {
+                    <td>
+                        <div class="@weekley_class[j-1]">
+                            <div><label>@(j * i + j)</label></div>
+                            <div class="your-plan"><label>あなたの予定</label></div>
+                            <div class="other-plan"><label>みんなの予定</label></div>
+                        </div>
+                    </td>
+                    }
+                </tr>
+                }
+            </tbody>
+        </table>
     </div>
-    <div>
+    @*<div>
         <h2>課題</h2>
     </div>
     <div>
@@ -17,5 +75,5 @@
     </div>
     <div>
         <h2>記事</h2>
-    </div>
+    </div>*@
 }
