--- a/BFStudio/Pages/TicketList/Views/Index.cshtml
+++ b/BFStudio/Pages/TicketList/Views/Index.cshtml
@@ -9,10 +9,10 @@
 
 <script>
     $(document).ready(function () {
-        var table = $("#todo-list").CreateTable();
+        //var table = $("#todo-list").CreateTable();
 
-        table.RecordSize(10);
-        table.CanSort(true);
+        //table.RecordSize(10);
+        //table.CanSort(true);
 
 
     });
