--- a/BFStudio/Content/Site.less
+++ b/BFStudio/Content/Site.less
@@ -13,3 +13,61 @@ div.login{
         border-radius:5px;
     }
 }
+#user-input-space{
+    margin: 0 auto;
+
+    #chat-msg{
+        width:80%;
+    }
+}
+
+#chat-hist{
+    margin:0 auto;
+    margin-left:50px;
+    margin-right:50px;
+    height:800px;
+    background-color:aqua;
+
+    div.record{
+        background-color:pink;
+        width:100%;
+        float:left;
+        display:block;
+
+        &:after{
+            clear:both;
+        }
+       
+    }
+    ul{
+
+        display:inline-block;
+        list-style-type:none;
+
+        &.user-info{
+            width:10%;
+            padding:0;
+
+            background-color:green;
+            text-align:right;
+
+            li{width:100%;
+            margin:0;}
+            label{
+                width:100%;
+                margin:0;
+                }
+        }
+
+        &.msg{
+            width:90%;
+            padding:0;
+            background-color:aquamarine;
+            text-align:left;
+
+            li{width:100%;margin:0; padding:0;}
+            label{width:100%;margin:0;}
+            margin:0;
+        }
+    }
+}
