--- a/BFStudio/MainPages/Shared/_Layout.cshtml
+++ b/BFStudio/MainPages/Shared/_Layout.cshtml
@@ -9,13 +9,13 @@
     <title>BFStudio @ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    @RenderSection("Ready", required: false)
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The description of my page" />
 </head>
 <body>
     <div class="upper-menu">
-        @Html.Partial("_UserPartial", Constants.MenuList)
+        @Html.Partial("_UserPartial", SystemCacheManager.MenuList)
     </div>
 
     <div class="main">
