--- a/BFStudio/MainPages/Shared/_Layout.cshtml
+++ b/BFStudio/MainPages/Shared/_Layout.cshtml
@@ -3,33 +3,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BFStudio @ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
+        @Styles.Render("~/Content/css")
+        @Styles.Render("~/Content/menu")
     @Scripts.Render("~/bundles/modernizr")
-    @RenderSection("Ready", required: false)
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The description of my page" />
 </head>
 <body>
-    <div class="upper-menu">
-        @Html.Partial("_UserPartial", SystemCacheManager.MenuList)
-    </div>
+    <div class="content">
+        <div class="row">
+            <div class="col-md-12">
 
-    <div class="main">
-        @RenderBody()
+                <div id='cssmenu'>
+                    @Html.Partial("_UserPartial", SystemCacheManager.MenuList.Where(p => p.PMENU_ID == null).OrderBy(p => p.SORT_NO))
+                </div>
+                    <ul class="logout">
+                        <li>@Html.ActionLink("ログアウト", "LogOff", "Login", null, htmlAttributes: new { @class = "upper-menu" })</li>
+                    </ul>
+
+                </div>
+            <div>
+                @RenderBody()
+            </div>
+        </div>
     </div>
+</body>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/menu")
+
+
     @RenderSection("scripts", required: false)
 
     @if (MvcApplication.IsDebug)
     {
         Output.WriteLine(Scripts.Render("~/Content/cssrefresh"));
     }
-</body>
-
 </html>
