--- a/BFStudio/MainPages/Shared/_UserPartial.cshtml
+++ b/BFStudio/MainPages/Shared/_UserPartial.cshtml
@@ -1,14 +1,52 @@
-﻿
-@model IEnumerable<BFStudio.Entity.MST_MENU>
+﻿@model IEnumerable<BFStudio.Entity.MST_MENU>
 
-@foreach (var menu in Model.OrderBy(p => p.SORT_NO))
-{
-    <ul>
-        <li>@Ajax.ActionLink(@menu.NAME,@menu.ACTION ,@menu.CONTROLLER , null , new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "main" }, htmlAttributes: new { @class = "upper-menu" })</li>
-    </ul>
-}
+<ul>
+    @foreach (var m in Model)
+    {
+        string option = "";
+        if (m.HasChild)
+        {
 
-<ul class="logout">
-    <li>@Html.ActionLink("ログアウト", "LogOff", "Login", null, htmlAttributes: new { @class = "upper-menu" })</li>
+            option += "has-sub";
+        }
+        if (m.IsActive)
+        {
+
+            option += " active";
+        }
+
+        <li class=option>
+            @Html.ActionLink(@m.NAME, @m.ACTION , @m.CONTROLLER )
+            @if (m.HasChild)
+            {
+                Html.RenderPartial("_UserPartial", m.ChildMenu);
+            }
+        </li>
+    }
 </ul>
 
+@*<ul>
+    <li><a href='#'>Top</a></li>
+    <li class='active has-sub'>
+        <a href='#'>Products</a>
+        <ul>
+            <li class='has-sub'>
+                <a href='#'>Product 1</a>
+                <ul>
+                    <li><a href='#'>Sub Product</a></li>
+                    <li><a href='#'>Sub Product</a></li>
+                </ul>
+            </li>
+            <li class='has-sub'>
+                <a href='#'>Product 2</a>
+                <ul>
+                    <li><a href='#'>Sub Product</a></li>
+                    <li><a href='#'>Sub Product</a></li>
+                </ul>
+            </li>
+        </ul>
+    </li>
+    <li><a href='#'>About</a></li>
+    <li><a href='#'>Contact</a></li>
+</ul>
+</div>*@
