--- a/BFStudio/Pages/ChatRoom/Views/Index.cshtml
+++ b/BFStudio/Pages/ChatRoom/Views/Index.cshtml
@@ -24,17 +24,11 @@
 
             con.received(function (data) {
 
-                var list = $("#chat-hist");
-                list.append("<div class=\"record\">" + getTemplate("user-info", data.SEND_USER_NM) + getTemplate("msg", data.USER_MSG) + "</div>");
+                var list = $("#chat-hist tr.last").before("<tr><td>"+data.SEND_USER_NM + "</td><td>" + data.USER_MSG + "</td></tr>");
             });
 
         });
 
-        function getTemplate(cls, msg) {
-            return "<ul class=\""+ cls +"\"><li><label>" + msg + "</label></li></ul>"
-
-            return temp;
-        }
 
         function sendMsg(con) {
             var sender = $("#chat-send");
@@ -61,10 +55,8 @@
 
 }
 
-<ul id="user-info" style="display:none"><li><label class="template"></label></li></ul>
-<ul id="msg" style="display:none"><li><label class="template"></label></li></ul>
-<div>
-    <div id="chat-hist">
+<div class="col-md-10">
+    @*<div id="chat-hist">
         @foreach (var msg in @Model.MessageList)
         {
             <div class="record">
@@ -72,9 +64,19 @@
             </div>
 
         }
-    </div>
+    </div>*@
+
+    <table id="chat-hist" class="table table-striped table-bordered table-hover">
+        <thead><tr><th>ユーザ</th><th>履歴</th></tr></thead>
+        <tbody>
+            @foreach (var msg in @Model.MessageList) {
+                <tr><td><label>@msg.SEND_USER_NM</label></td><td><label>@msg.USER_MSG</label></td></tr>
+            }
+        </tbody>
+    </table>
     <div id="user-input-space">
-        <input id="chat-msg" type="text" />
-        <input id="chat-send" type="button" value="送信" />
+        <input id="chat-msg" class="text-primary" type="text" />
+        <input id="chat-send" type="button" class="btn btn-primary" value="送信" />
     </div>
 </div>
+<div class="col-md-2"></div>
